--- a/slide.html
+++ b/slide.html
@@ -18,6 +18,6 @@
   </style>
 </head>
 <body>
-  <iframe src="https://example.com"></iframe>
+  <iframe src="https://docs.google.com/presentation/d/1JZClPwT_0-ihegvoxsWQ4fnEH3zbvMTBRtUlt8XG71s/edit?slide=id.g369aec42308_0_10#slide=id.g369aec42308_0_10"></iframe>
 </body>
 </html>
