--- a/dev.html
+++ b/dev.html
@@ -1,1 +1,23 @@
-
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>志望理由書</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+    }
+    iframe {
+      border: none;
+      width: 100vw;
+      height: 100vh;
+    }
+  </style>
+</head>
+<body>
+  <iframe src="https://script.google.com/macros/s/AKfycby70qhQkuFvWzthLB7bAaSPBL_CODeVEWGB9s--1y4/dev" allowfullscreen></iframe>
+</body>
+</html>
