--- a/timeline.html
+++ b/timeline.html
@@ -18,6 +18,6 @@
   </style>
 </head>
 <body>
-  <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQB3Vm6QESmxISbSvkI9dIeaX992cW2w9Pm7E8Ho-NRWM8wCWENMGhsPtbK7AZhEYHa9FT_IC9-aOWM/pubhtml?gid=1044171576&amp;single=true&amp;widget=true&amp;headers=falsehttps://docs.google.com/spreadsheets/d/e/2PACX-1vQB3Vm6QESmxISbSvkI9dIeaX992cW2w9Pm7E8Ho-NRWM8wCWENMGhsPtbK7AZhEYHa9FT_IC9-aOWM/pubhtml?gid=1044171576&amp;single=false&amp;widget=false&headers=false&chrome=false" allowfullscreen></iframe>
+  <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQB3Vm6QESmxISbSvkI9dIeaX992cW2w9Pm7E8Ho-NRWM8wCWENMGhsPtbK7AZhEYHa9FT_IC9-aOWM/pubhtml?gid=1044171576&amp;single=false&amp;widget=false&headers=false&chrome=false" allowfullscreen></iframe>
 </body>
 </html>
