--- a/slide.html
+++ b/slide.html
@@ -1,1 +1,24 @@
-https://onedrive.live.com/edit?cid=be876ba51b72de5a&id=BE876BA51B72DE5A!sd2da69efa66549bbb27c9f1750d553b4&resid=BE876BA51B72DE5A!sd2da69efa66549bbb27c9f1750d553b4&ithint=file%2Cpptx&embed=1&em=2&amp=&wdAr=1.7777777777777777&migratedtospo=true&redeem=aHR0cHM6Ly8xZHJ2Lm1zL3AvYy9iZTg3NmJhNTFiNzJkZTVhL0lRVHZhZHJTWmFhN1NiSjhueGRRMVZPMEFYMGhEeUlnbVV0SllyNUJieEJ2VWp3P2VtPTImYW1wO3dkQXI9MS43Nzc3Nzc3Nzc3Nzc3Nzc3&wdo=2
+
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>志望理由書</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+    }
+    iframe {
+      border: none;
+      width: 100vw;
+      height: 100vh;
+    }
+  </style>
+</head>
+<body>
+  <iframe src="https://onedrive.live.com/edit?cid=be876ba51b72de5a&id=BE876BA51B72DE5A!sd2da69efa66549bbb27c9f1750d553b4&resid=BE876BA51B72DE5A!sd2da69efa66549bbb27c9f1750d553b4&ithint=file%2Cpptx&embed=1&em=2&amp=&wdAr=1.7777777777777777&migratedtospo=true&redeem=aHR0cHM6Ly8xZHJ2Lm1zL3AvYy9iZTg3NmJhNTFiNzJkZTVhL0lRVHZhZHJTWmFhN1NiSjhueGRRMVZPMEFYMGhEeUlnbVV0SllyNUJieEJ2VWp3P2VtPTImYW1wO3dkQXI9MS43Nzc3Nzc3Nzc3Nzc3Nzc3&wdo=2" allowfullscreen></iframe>
+</body>
+</html>
